@@ -21,9 +21,6 @@
 
 /* A simple program to test the text rendering feature of the TTF library */
 
-/* quiet windows compiler warnings */
-#define _CRT_SECURE_NO_WARNINGS
-
 #include <stdlib.h>
 #include <stdio.h>
 #include <string.h>
@@ -38,7 +35,14 @@
 #define HEIGHT  480
 
 static char *Usage =
-"Usage: %s [-solid] [-utf8|-unicode] [-b] [-i] [-u] [-s] [-outline size] [-hintlight|-hintmono|-hintnone] [-nokerning] [-fgcol r,g,b] [-bgcol r,g,b] <font>.ttf [ptsize] [text]\n";
+"Usage: %s [-solid] [-shaded] [-blended] [-utf8|-unicode] [-b] [-i] [-u] [-s] [-outline size] [-hintlight|-hintmono|-hintnone] [-nokerning] [-fgcol r,g,b,a] [-bgcol r,g,b,a] <font>.ttf [ptsize] [text]\n";
+
+typedef enum
+{
+    TextRenderSolid,
+    TextRenderShaded,
+    TextRenderBlended
+} TextRenderMethod;
 
 typedef struct {
     SDL_Texture *caption;
@@ -80,7 +84,7 @@ int main(int argc, char *argv[])
     SDL_Color *forecol;
     SDL_Color *backcol;
     SDL_Event event;
-    int rendersolid;
+    TextRenderMethod rendermethod;
     int renderstyle;
     int outline;
     int hinting;
@@ -96,7 +100,7 @@ int main(int argc, char *argv[])
     /* Look for special execution mode */
     dump = 0;
     /* Look for special rendering types */
-    rendersolid = 0;
+    rendermethod = TextRenderShaded;
     renderstyle = TTF_STYLE_NORMAL;
     rendertype = RENDER_LATIN1;
     outline = 0;
@@ -107,7 +111,13 @@ int main(int argc, char *argv[])
     backcol = &white;
     for (i=1; argv[i] && argv[i][0] == '-'; ++i) {
         if (strcmp(argv[i], "-solid") == 0) {
-            rendersolid = 1;
+            rendermethod = TextRenderSolid;
+        } else
+        if (strcmp(argv[i], "-shaded") == 0) {
+            rendermethod = TextRenderShaded;
+        } else
+        if (strcmp(argv[i], "-blended") == 0) {
+            rendermethod = TextRenderBlended;
         } else
         if (strcmp(argv[i], "-utf8") == 0) {
             rendertype = RENDER_UTF8;
@@ -149,24 +159,26 @@ int main(int argc, char *argv[])
             dump = 1;
         } else
         if (strcmp(argv[i], "-fgcol") == 0) {
-            int r, g, b;
-            if (sscanf (argv[++i], "%d,%d,%d", &r, &g, &b) != 3) {
+            int r, g, b, a = 0xFF;
+            if (sscanf (argv[++i], "%d,%d,%d,%d", &r, &g, &b, &a) < 3) {
                 fprintf(stderr, Usage, argv0);
                 return(1);
             }
             forecol->r = (Uint8)r;
             forecol->g = (Uint8)g;
             forecol->b = (Uint8)b;
+            forecol->a = (Uint8)a;
         } else
         if (strcmp(argv[i], "-bgcol") == 0) {
-            int r, g, b;
-            if (sscanf (argv[++i], "%d,%d,%d", &r, &g, &b) != 3) {
+            int r, g, b, a = 0xFF;
+            if (sscanf (argv[++i], "%d,%d,%d,%d", &r, &g, &b, &a) < 3) {
                 fprintf(stderr, Usage, argv0);
                 return(1);
             }
             backcol->r = (Uint8)r;
             backcol->g = (Uint8)g;
             backcol->b = (Uint8)b;
+            backcol->a = (Uint8)a;
         } else {
             fprintf(stderr, Usage, argv0);
             return(1);
@@ -234,10 +246,16 @@ int main(int argc, char *argv[])
 
     /* Show which font file we're looking at */
     SDL_snprintf(string, sizeof(string), "Font file: %s", argv[0]);  /* possible overflow */
-    if (rendersolid) {
+    switch (rendermethod) {
+    case TextRenderSolid:
         text = TTF_RenderText_Solid(font, string, *forecol);
-    } else {
+        break;
+    case TextRenderShaded:
         text = TTF_RenderText_Shaded(font, string, *forecol, *backcol);
+        break;
+    case TextRenderBlended:
+        text = TTF_RenderText_Blended(font, string, *forecol);
+        break;
     }
     if (text != NULL) {
         scene.captionRect.x = 4;
@@ -256,34 +274,51 @@ int main(int argc, char *argv[])
     }
     switch (rendertype) {
         case RENDER_LATIN1:
-        if (rendersolid) {
-            text = TTF_RenderText_Solid(font,message,*forecol);
-        } else {
-            text = TTF_RenderText_Shaded(font,message,*forecol,*backcol);
-        }
-        break;
+            switch (rendermethod) {
+            case TextRenderSolid:
+                text = TTF_RenderText_Solid(font, message, *forecol);
+                break;
+            case TextRenderShaded:
+                text = TTF_RenderText_Shaded(font, message, *forecol, *backcol);
+                break;
+            case TextRenderBlended:
+                text = TTF_RenderText_Blended(font, message, *forecol);
+                break;
+            }
+            break;
 
         case RENDER_UTF8:
-        if (rendersolid) {
-            text = TTF_RenderUTF8_Solid(font,message,*forecol);
-        } else {
-            text = TTF_RenderUTF8_Shaded(font,message,*forecol,*backcol);
-        }
-        break;
+            switch (rendermethod) {
+            case TextRenderSolid:
+                text = TTF_RenderUTF8_Solid(font, message, *forecol);
+                break;
+            case TextRenderShaded:
+                text = TTF_RenderUTF8_Shaded(font, message, *forecol, *backcol);
+                break;
+            case TextRenderBlended:
+                text = TTF_RenderUTF8_Blended(font, message, *forecol);
+                break;
+            }
+            break;
 
         case RENDER_UNICODE:
         {
             Uint16 *unicode_text = SDL_iconv_utf8_ucs2(message);
-            if (rendersolid) {
-                text = TTF_RenderUNICODE_Solid(font,
-                    unicode_text, *forecol);
-            } else {
-                text = TTF_RenderUNICODE_Shaded(font,
-                    unicode_text, *forecol, *backcol);
+            switch (rendermethod) {
+            case TextRenderSolid:
+                text = TTF_RenderUNICODE_Solid(font, unicode_text, *forecol);
+                break;
+            case TextRenderShaded:
+                text = TTF_RenderUNICODE_Shaded(font, unicode_text, *forecol, *backcol);
+                break;
+            case TextRenderBlended:
+                text = TTF_RenderUNICODE_Blended(font, unicode_text, *forecol);
+                break;
             }
             SDL_free(unicode_text);
         }
         break;
+
         default:
         text = NULL; /* This shouldn't happen */
         break;
