@@ -1,4 +1,6 @@
 2.0.15:
+Sam Lantinga - Sun Sep 10 00:18:45 PDT 2017
+ * Text rendering functions now use the alpha component of the text colors
 Sam Lantinga - Sat Sep  9 22:21:55 PDT 2017
  * Added support for characters greater than 0xFFFF (e.g. emoji) in the UTF-8 APIs
 
